// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpgradeFareSelectBoundsPage should not render header when in a webview 1`] = `
<div>
  <div
    class="air-upgrade-select-bounds--content"
  >
    <div>
      <div
        class="page-header hidden action-bar"
        id=""
      >
        <ul
          class="action-bar-buttons action-bar--left-buttons"
        />
        <div
          class="action-bar--container"
        >
          <div
            class="action-bar--title"
          >
            <span
              class="action-bar--main-title"
            >
              AIR_UPGRADE_SELECT_BOUNDS_PAGE_TITLE
            </span>
            <span
              class="action-bar--sub-title"
            />
          </div>
        </div>
        <ul
          class="action-bar-buttons action-bar--right-buttons"
        />
      </div>
      <div />
    </div>
    <form
      class="air-upgrade-select-bounds-form form"
      name="air-upgrade-select-bounds-form"
      novalidate=""
    >
      <fieldset>
        <div
          class="bounds-header"
        >
          <div
            class="bounds-header--destination"
          >
            <div
              class="trip-date-dest-city--city-name"
            >
              <span
                class="trip-date-dest-city--trip-date"
              >
                Dec 29 - Jan 5
              </span>
              <span
                class="trip-date-dest-city--destination-airport pblue"
              >
                Houston
              </span>
            </div>
            <div>
              <div
                class="confirmation-label"
                data-qa="confirmation-label"
              >
                SHARED__PASSENGER_RESERVATION_TITLE__CONFIRMATION
              </div>
              <div
                class="xlarge passenger-record-locator green align-right"
                data-qa="passenger-record-locator"
              >
                4L9D73
              </div>
            </div>
          </div>
          <div
            class="bounds-header--airports"
          >
            Dallas (Love Field), TX to Houston (Hobby), TX
          </div>
        </div>
        <div
          class="air-upgrade-select-bounds-form--message"
        >
          Please choose from the flights below to upgrade all passengers on that flight to Wanna Get Away Plus
        </div>
        <div
          class="air-upgrade-select-bounds-form--bound-list"
        >
          <div
            class="air-upgrade-bound"
          >
            <div
              class="air-upgrade-bound--type"
            >
              DEPARTING
            </div>
            <div
              class="flight-brief-summary bgwhite bdb p5"
            >
              <div
                class="flex xlarge pdkblue bold"
              >
                <div
                  class="flex4"
                >
                  Dec 29
                </div>
                <div
                  class="flex2"
                >
                  DAL
                </div>
                <div
                  class="flex2 flight-brief-summary--airplane center"
                >
                  <i
                    class="mt3 icon icon_airplane"
                  />
                </div>
                <div
                  class="flex2"
                >
                  HOU
                </div>
              </div>
              <div
                class="flex large gray4"
              >
                <div
                  class="flex4"
                >
                  Wednesday
                </div>
                <div
                  class="flex2 flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:10
                    </span>
                    <span
                      class="time-period"
                    >
                      AM
                    </span>
                  </div>
                </div>
                <div
                  class="flex2"
                />
                <div
                  class="flight-brief-summary--summary-group"
                >
                  <div
                    class="flex2 flight-time"
                  >
                    <div
                      class="flight-time--time"
                    >
                      <span>
                        3:40
                      </span>
                      <span
                        class="time-period"
                      >
                        PM
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="air-upgrade-bound--select"
            >
              <div
                class="field"
              >
                <div
                  class="relative flex checkbox-button flex-cross-center"
                  name="mockId1"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width ml2"
                    >
                      <div
                        class="air-upgrade-bound--select-message-header"
                      >
                        Upgrade all passengers to Business Select®
                      </div>
                      <div
                        class="air-upgrade-bound--select-message-body"
                      >
                        and earn 6,937 more points
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="air-upgrade-bound"
          >
            <div
              class="air-upgrade-bound--type"
            >
              RETURNING
            </div>
            <div
              class="flight-brief-summary bgwhite bdb p5"
            >
              <div
                class="flex xlarge pdkblue bold"
              >
                <div
                  class="flex4"
                >
                  Jan 5
                </div>
                <div
                  class="flex2"
                >
                  HOU
                </div>
                <div
                  class="flex2 flight-brief-summary--airplane center"
                >
                  <i
                    class="mt3 icon icon_airplane"
                  />
                </div>
                <div
                  class="flex2"
                >
                  DAL
                </div>
              </div>
              <div
                class="flex large gray4"
              >
                <div
                  class="flex4"
                >
                  Wednesday
                </div>
                <div
                  class="flex2 flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:05
                    </span>
                    <span
                      class="time-period"
                    >
                      AM
                    </span>
                  </div>
                </div>
                <div
                  class="flex2"
                />
                <div
                  class="flight-brief-summary--summary-group"
                >
                  <div
                    class="flex2 flight-time"
                  >
                    <div
                      class="flight-time--time"
                    >
                      <span>
                        1:30
                      </span>
                      <span
                        class="time-period"
                      >
                        PM
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="air-upgrade-bound--select"
            >
              <div
                class="field"
              >
                <div
                  class="relative flex checkbox-button flex-cross-center"
                  name="mockId2"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width ml2"
                    >
                      <div
                        class="air-upgrade-bound--select-message-header"
                      >
                        Upgrade all passengers to Business Select®
                      </div>
                      <div
                        class="air-upgrade-bound--select-message-body"
                      >
                        and earn 6,937 more points
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="air-upgrade-select-bounds-form--pricing-list"
        >
          <div
            class="bound-price"
          >
            <div
              class="bound-price--airport-section"
            >
              <div
                class="bound-price--airport-info"
              >
                DAL
                 - 
                HOU
              </div>
              <div
                class="bound-price--flight-number"
              >
                539/1467
              </div>
            </div>
            <div
              class="bound-price--amount-info-section"
            >
              <div
                class="bound-price--amount-section"
              >
                <div
                  class="bound-price--amount-flex-group"
                >
                  <div
                    class="bound-price--amount"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        30.11
                      </span>
                    </div>
                  </div>
                  <div
                    class="bound-price--pax-count"
                  >
                    x
                    2
                     
                    AIR_UPGRADE_MULTI_PAX_TEXT
                  </div>
                </div>
                <div
                  class="bound-price--total-amount"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      0.00
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bound-price"
          >
            <div
              class="bound-price--airport-section"
            >
              <div
                class="bound-price--airport-info"
              >
                HOU
                 - 
                DAL
              </div>
              <div
                class="bound-price--flight-number"
              >
                694/696
              </div>
            </div>
            <div
              class="bound-price--amount-info-section"
            >
              <div
                class="bound-price--amount-section"
              >
                <div
                  class="bound-price--amount-flex-group"
                >
                  <div
                    class="bound-price--amount"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        30.09
                      </span>
                    </div>
                  </div>
                  <div
                    class="bound-price--pax-count"
                  >
                    x
                    2
                     
                    AIR_UPGRADE_MULTI_PAX_TEXT
                  </div>
                </div>
                <div
                  class="bound-price--total-amount"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      0.00
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="price-summary-notice"
        >
          <span>
            Please read 
            <a
              href="https://mobile.southwest.com/fare-rules"
              target="_blank"
            >
              fare rules
            </a>
             associated with purchase.
          </span>
        </div>
        <div
          class="purchase-content--summary-footer"
        >
          <div
            class="price-total"
          >
            <div
              class="price-total--info"
            >
              <div
                class="price-line"
              >
                <span
                  class="price-line--title"
                >
                  SHARED__PRICE_LINE_TITLES__TOTAL_PASSENGER
                </span>
                <div
                  class="price-amount"
                >
                  <div
                    class="price-line--currency_total"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        0.00
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="table fullwidth mt3"
              >
                <div
                  class="price-total--info-col"
                >
                  <p>
                    SHARED__PRICE_TOTAL_EXPLANATORY_NOTE__BRIEF_NOTE
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="purchase-content--summary-footer-nav"
          >
            <button
              class="button button--fluid huge button--yellow"
              type="submit"
            >
              AIR_UPGRADE_SELECT_BOUNDS_SUBMIT_TEXT
            </button>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`UpgradeFareSelectBoundsPage should render a promo code banner if one is provided 1`] = `
<div>
  <div
    class="air-upgrade-select-bounds--content"
  >
    <div>
      <div
        class="page-header action-bar"
        id=""
      >
        <ul
          class="action-bar-buttons action-bar--left-buttons"
        />
        <div
          class="action-bar--container"
        >
          <div
            class="action-bar--title"
          >
            <span
              class="action-bar--main-title"
            >
              AIR_UPGRADE_SELECT_BOUNDS_PAGE_TITLE
            </span>
            <span
              class="action-bar--sub-title"
            />
          </div>
        </div>
        <ul
          class="action-bar-buttons action-bar--right-buttons"
        />
      </div>
      <div />
    </div>
    <div
      class="info-banner air-upgrade-select-bounds-promo-message"
    >
      <div
        class="info-banner--alert"
      >
        <i
          class="icon icon_check-circle"
        />
      </div>
      <div
        class="info-banner-container"
      >
        <b
          class="info-banner-container--header"
        >
          Prices reflect previously applied promo code
        </b>
        <p
          class="info-banner-container--body"
        />
        <div
          class="info-banner-container--link"
        />
      </div>
    </div>
    <form
      class="air-upgrade-select-bounds-form form"
      name="air-upgrade-select-bounds-form"
      novalidate=""
    >
      <fieldset>
        <div
          class="bounds-header"
        >
          <div
            class="bounds-header--destination"
          >
            <div
              class="trip-date-dest-city--city-name"
            >
              <span
                class="trip-date-dest-city--trip-date"
              >
                Dec 29 - Jan 5
              </span>
              <span
                class="trip-date-dest-city--destination-airport pblue"
              >
                Houston
              </span>
            </div>
            <div>
              <div
                class="confirmation-label"
                data-qa="confirmation-label"
              >
                SHARED__PASSENGER_RESERVATION_TITLE__CONFIRMATION
              </div>
              <div
                class="xlarge passenger-record-locator green align-right"
                data-qa="passenger-record-locator"
              >
                4L9D73
              </div>
            </div>
          </div>
          <div
            class="bounds-header--airports"
          >
            Dallas (Love Field), TX to Houston (Hobby), TX
          </div>
        </div>
        <div
          class="air-upgrade-select-bounds-form--message"
        >
          Please choose from the flights below to upgrade all passengers on that flight to Wanna Get Away Plus
        </div>
        <div
          class="air-upgrade-select-bounds-form--bound-list"
        >
          <div
            class="air-upgrade-bound"
          >
            <div
              class="air-upgrade-bound--type"
            >
              DEPARTING
            </div>
            <div
              class="flight-brief-summary bgwhite bdb p5"
            >
              <div
                class="flex xlarge pdkblue bold"
              >
                <div
                  class="flex4"
                >
                  Dec 29
                </div>
                <div
                  class="flex2"
                >
                  DAL
                </div>
                <div
                  class="flex2 flight-brief-summary--airplane center"
                >
                  <i
                    class="mt3 icon icon_airplane"
                  />
                </div>
                <div
                  class="flex2"
                >
                  HOU
                </div>
              </div>
              <div
                class="flex large gray4"
              >
                <div
                  class="flex4"
                >
                  Wednesday
                </div>
                <div
                  class="flex2 flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:10
                    </span>
                    <span
                      class="time-period"
                    >
                      AM
                    </span>
                  </div>
                </div>
                <div
                  class="flex2"
                />
                <div
                  class="flight-brief-summary--summary-group"
                >
                  <div
                    class="flex2 flight-time"
                  >
                    <div
                      class="flight-time--time"
                    >
                      <span>
                        3:40
                      </span>
                      <span
                        class="time-period"
                      >
                        PM
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="air-upgrade-bound--select"
            >
              <div
                class="field"
              >
                <div
                  class="relative flex checkbox-button flex-cross-center"
                  name="mockId1"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width ml2"
                    >
                      <div
                        class="air-upgrade-bound--select-message-header"
                      >
                        Upgrade all passengers to Business Select®
                      </div>
                      <div
                        class="air-upgrade-bound--select-message-body"
                      >
                        and earn 6,937 more points
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="air-upgrade-bound"
          >
            <div
              class="air-upgrade-bound--type"
            >
              RETURNING
            </div>
            <div
              class="flight-brief-summary bgwhite bdb p5"
            >
              <div
                class="flex xlarge pdkblue bold"
              >
                <div
                  class="flex4"
                >
                  Jan 5
                </div>
                <div
                  class="flex2"
                >
                  HOU
                </div>
                <div
                  class="flex2 flight-brief-summary--airplane center"
                >
                  <i
                    class="mt3 icon icon_airplane"
                  />
                </div>
                <div
                  class="flex2"
                >
                  DAL
                </div>
              </div>
              <div
                class="flex large gray4"
              >
                <div
                  class="flex4"
                >
                  Wednesday
                </div>
                <div
                  class="flex2 flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:05
                    </span>
                    <span
                      class="time-period"
                    >
                      AM
                    </span>
                  </div>
                </div>
                <div
                  class="flex2"
                />
                <div
                  class="flight-brief-summary--summary-group"
                >
                  <div
                    class="flex2 flight-time"
                  >
                    <div
                      class="flight-time--time"
                    >
                      <span>
                        1:30
                      </span>
                      <span
                        class="time-period"
                      >
                        PM
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="air-upgrade-bound--select"
            >
              <div
                class="field"
              >
                <div
                  class="relative flex checkbox-button flex-cross-center"
                  name="mockId2"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width ml2"
                    >
                      <div
                        class="air-upgrade-bound--select-message-header"
                      >
                        Upgrade all passengers to Business Select®
                      </div>
                      <div
                        class="air-upgrade-bound--select-message-body"
                      >
                        and earn 6,937 more points
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="air-upgrade-select-bounds-form--pricing-list"
        >
          <div
            class="bound-price"
          >
            <div
              class="bound-price--airport-section"
            >
              <div
                class="bound-price--airport-info"
              >
                DAL
                 - 
                HOU
              </div>
              <div
                class="bound-price--flight-number"
              >
                539/1467
              </div>
            </div>
            <div
              class="bound-price--amount-info-section"
            >
              <div
                class="bound-price--amount-section"
              >
                <div
                  class="bound-price--amount-flex-group"
                >
                  <div
                    class="bound-price--amount"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        30.11
                      </span>
                    </div>
                  </div>
                  <div
                    class="bound-price--pax-count"
                  >
                    x
                    2
                     
                    AIR_UPGRADE_MULTI_PAX_TEXT
                  </div>
                </div>
                <div
                  class="bound-price--total-amount"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      0.00
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bound-price"
          >
            <div
              class="bound-price--airport-section"
            >
              <div
                class="bound-price--airport-info"
              >
                HOU
                 - 
                DAL
              </div>
              <div
                class="bound-price--flight-number"
              >
                694/696
              </div>
            </div>
            <div
              class="bound-price--amount-info-section"
            >
              <div
                class="bound-price--amount-section"
              >
                <div
                  class="bound-price--amount-flex-group"
                >
                  <div
                    class="bound-price--amount"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        30.09
                      </span>
                    </div>
                  </div>
                  <div
                    class="bound-price--pax-count"
                  >
                    x
                    2
                     
                    AIR_UPGRADE_MULTI_PAX_TEXT
                  </div>
                </div>
                <div
                  class="bound-price--total-amount"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      0.00
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="price-summary-notice"
        >
          <span>
            Please read 
            <a
              href="https://mobile.southwest.com/fare-rules"
              target="_blank"
            >
              fare rules
            </a>
             associated with purchase.
          </span>
        </div>
        <div
          class="purchase-content--summary-footer"
        >
          <div
            class="price-total"
          >
            <div
              class="price-total--info"
            >
              <div
                class="price-line"
              >
                <span
                  class="price-line--title"
                >
                  SHARED__PRICE_LINE_TITLES__TOTAL_PASSENGER
                </span>
                <div
                  class="price-amount"
                >
                  <div
                    class="price-line--currency_total"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        0.00
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="table fullwidth mt3"
              >
                <div
                  class="price-total--info-col"
                >
                  <p>
                    SHARED__PRICE_TOTAL_EXPLANATORY_NOTE__BRIEF_NOTE
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="purchase-content--summary-footer-nav"
          >
            <button
              class="button button--fluid huge button--yellow"
              type="submit"
            >
              AIR_UPGRADE_SELECT_BOUNDS_SUBMIT_TEXT
            </button>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`UpgradeFareSelectBoundsPage should render correctly 1`] = `
<div>
  <div
    class="air-upgrade-select-bounds--content"
  >
    <div>
      <div
        class="page-header action-bar"
        id=""
      >
        <ul
          class="action-bar-buttons action-bar--left-buttons"
        />
        <div
          class="action-bar--container"
        >
          <div
            class="action-bar--title"
          >
            <span
              class="action-bar--main-title"
            >
              AIR_UPGRADE_SELECT_BOUNDS_PAGE_TITLE
            </span>
            <span
              class="action-bar--sub-title"
            />
          </div>
        </div>
        <ul
          class="action-bar-buttons action-bar--right-buttons"
        />
      </div>
      <div />
    </div>
    <form
      class="air-upgrade-select-bounds-form form"
      name="air-upgrade-select-bounds-form"
      novalidate=""
    >
      <fieldset>
        <div
          class="bounds-header"
        >
          <div
            class="bounds-header--destination"
          >
            <div
              class="trip-date-dest-city--city-name"
            >
              <span
                class="trip-date-dest-city--trip-date"
              >
                Dec 29 - Jan 5
              </span>
              <span
                class="trip-date-dest-city--destination-airport pblue"
              >
                Houston
              </span>
            </div>
            <div>
              <div
                class="confirmation-label"
                data-qa="confirmation-label"
              >
                SHARED__PASSENGER_RESERVATION_TITLE__CONFIRMATION
              </div>
              <div
                class="xlarge passenger-record-locator green align-right"
                data-qa="passenger-record-locator"
              >
                4L9D73
              </div>
            </div>
          </div>
          <div
            class="bounds-header--airports"
          >
            Dallas (Love Field), TX to Houston (Hobby), TX
          </div>
        </div>
        <div
          class="air-upgrade-select-bounds-form--message"
        >
          Please choose from the flights below to upgrade all passengers on that flight to Wanna Get Away Plus
        </div>
        <div
          class="air-upgrade-select-bounds-form--bound-list"
        >
          <div
            class="air-upgrade-bound"
          >
            <div
              class="air-upgrade-bound--type"
            >
              DEPARTING
            </div>
            <div
              class="flight-brief-summary bgwhite bdb p5"
            >
              <div
                class="flex xlarge pdkblue bold"
              >
                <div
                  class="flex4"
                >
                  Dec 29
                </div>
                <div
                  class="flex2"
                >
                  DAL
                </div>
                <div
                  class="flex2 flight-brief-summary--airplane center"
                >
                  <i
                    class="mt3 icon icon_airplane"
                  />
                </div>
                <div
                  class="flex2"
                >
                  HOU
                </div>
              </div>
              <div
                class="flex large gray4"
              >
                <div
                  class="flex4"
                >
                  Wednesday
                </div>
                <div
                  class="flex2 flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:10
                    </span>
                    <span
                      class="time-period"
                    >
                      AM
                    </span>
                  </div>
                </div>
                <div
                  class="flex2"
                />
                <div
                  class="flight-brief-summary--summary-group"
                >
                  <div
                    class="flex2 flight-time"
                  >
                    <div
                      class="flight-time--time"
                    >
                      <span>
                        3:40
                      </span>
                      <span
                        class="time-period"
                      >
                        PM
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="air-upgrade-bound--select"
            >
              <div
                class="field"
              >
                <div
                  class="relative flex checkbox-button flex-cross-center"
                  name="mockId1"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width ml2"
                    >
                      <div
                        class="air-upgrade-bound--select-message-header"
                      >
                        Upgrade all passengers to Business Select®
                      </div>
                      <div
                        class="air-upgrade-bound--select-message-body"
                      >
                        and earn 6,937 more points
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="air-upgrade-bound"
          >
            <div
              class="air-upgrade-bound--type"
            >
              RETURNING
            </div>
            <div
              class="flight-brief-summary bgwhite bdb p5"
            >
              <div
                class="flex xlarge pdkblue bold"
              >
                <div
                  class="flex4"
                >
                  Jan 5
                </div>
                <div
                  class="flex2"
                >
                  HOU
                </div>
                <div
                  class="flex2 flight-brief-summary--airplane center"
                >
                  <i
                    class="mt3 icon icon_airplane"
                  />
                </div>
                <div
                  class="flex2"
                >
                  DAL
                </div>
              </div>
              <div
                class="flex large gray4"
              >
                <div
                  class="flex4"
                >
                  Wednesday
                </div>
                <div
                  class="flex2 flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:05
                    </span>
                    <span
                      class="time-period"
                    >
                      AM
                    </span>
                  </div>
                </div>
                <div
                  class="flex2"
                />
                <div
                  class="flight-brief-summary--summary-group"
                >
                  <div
                    class="flex2 flight-time"
                  >
                    <div
                      class="flight-time--time"
                    >
                      <span>
                        1:30
                      </span>
                      <span
                        class="time-period"
                      >
                        PM
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="air-upgrade-bound--select"
            >
              <div
                class="field"
              >
                <div
                  class="relative flex checkbox-button flex-cross-center"
                  name="mockId2"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width ml2"
                    >
                      <div
                        class="air-upgrade-bound--select-message-header"
                      >
                        Upgrade all passengers to Business Select®
                      </div>
                      <div
                        class="air-upgrade-bound--select-message-body"
                      >
                        and earn 6,937 more points
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="air-upgrade-select-bounds-form--pricing-list"
        >
          <div
            class="bound-price"
          >
            <div
              class="bound-price--airport-section"
            >
              <div
                class="bound-price--airport-info"
              >
                DAL
                 - 
                HOU
              </div>
              <div
                class="bound-price--flight-number"
              >
                539/1467
              </div>
            </div>
            <div
              class="bound-price--amount-info-section"
            >
              <div
                class="bound-price--amount-section"
              >
                <div
                  class="bound-price--amount-flex-group"
                >
                  <div
                    class="bound-price--amount"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        30.11
                      </span>
                    </div>
                  </div>
                  <div
                    class="bound-price--pax-count"
                  >
                    x
                    2
                     
                    AIR_UPGRADE_MULTI_PAX_TEXT
                  </div>
                </div>
                <div
                  class="bound-price--total-amount"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      0.00
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bound-price"
          >
            <div
              class="bound-price--airport-section"
            >
              <div
                class="bound-price--airport-info"
              >
                HOU
                 - 
                DAL
              </div>
              <div
                class="bound-price--flight-number"
              >
                694/696
              </div>
            </div>
            <div
              class="bound-price--amount-info-section"
            >
              <div
                class="bound-price--amount-section"
              >
                <div
                  class="bound-price--amount-flex-group"
                >
                  <div
                    class="bound-price--amount"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        30.09
                      </span>
                    </div>
                  </div>
                  <div
                    class="bound-price--pax-count"
                  >
                    x
                    2
                     
                    AIR_UPGRADE_MULTI_PAX_TEXT
                  </div>
                </div>
                <div
                  class="bound-price--total-amount"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      0.00
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="price-summary-notice"
        >
          <span>
            Please read 
            <a
              href="https://mobile.southwest.com/fare-rules"
              target="_blank"
            >
              fare rules
            </a>
             associated with purchase.
          </span>
        </div>
        <div
          class="purchase-content--summary-footer"
        >
          <div
            class="price-total"
          >
            <div
              class="price-total--info"
            >
              <div
                class="price-line"
              >
                <span
                  class="price-line--title"
                >
                  SHARED__PRICE_LINE_TITLES__TOTAL_PASSENGER
                </span>
                <div
                  class="price-amount"
                >
                  <div
                    class="price-line--currency_total"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        0.00
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="table fullwidth mt3"
              >
                <div
                  class="price-total--info-col"
                >
                  <p>
                    SHARED__PRICE_TOTAL_EXPLANATORY_NOTE__BRIEF_NOTE
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="purchase-content--summary-footer-nav"
          >
            <button
              class="button button--fluid huge button--yellow"
              type="submit"
            >
              AIR_UPGRADE_SELECT_BOUNDS_SUBMIT_TEXT
            </button>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`UpgradeFareSelectBoundsPage should render the placement if promoTop01 exists 1`] = `
<div>
  <div
    class="air-upgrade-select-bounds--content"
  >
    <div>
      <div
        class="page-header action-bar"
        id=""
      >
        <ul
          class="action-bar-buttons action-bar--left-buttons"
        />
        <div
          class="action-bar--container"
        >
          <div
            class="action-bar--title"
          >
            <span
              class="action-bar--main-title"
            >
              AIR_UPGRADE_SELECT_BOUNDS_PAGE_TITLE
            </span>
            <span
              class="action-bar--sub-title"
            />
          </div>
        </div>
        <ul
          class="action-bar-buttons action-bar--right-buttons"
        />
      </div>
      <div />
    </div>
    <div
      data-qa="observed-viewport"
    >
      <div
        class="dynamic-placement"
      >
        <div
          class="shimmer"
        >
          <div
            class="shimmer--children"
          >
            <div
              class="image-placement"
            >
              <div
                data-qa="placement-link"
              >
                <img
                  alt=""
                  class="image-placement--background-image"
                  src="/content/mkt/images/landing_pages/__tests__/chase-placement.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <form
      class="air-upgrade-select-bounds-form form"
      name="air-upgrade-select-bounds-form"
      novalidate=""
    >
      <fieldset>
        <div
          class="bounds-header"
        >
          <div
            class="bounds-header--destination"
          >
            <div
              class="trip-date-dest-city--city-name"
            >
              <span
                class="trip-date-dest-city--trip-date"
              >
                Dec 29 - Jan 5
              </span>
              <span
                class="trip-date-dest-city--destination-airport pblue"
              >
                Houston
              </span>
            </div>
            <div>
              <div
                class="confirmation-label"
                data-qa="confirmation-label"
              >
                SHARED__PASSENGER_RESERVATION_TITLE__CONFIRMATION
              </div>
              <div
                class="xlarge passenger-record-locator green align-right"
                data-qa="passenger-record-locator"
              >
                4L9D73
              </div>
            </div>
          </div>
          <div
            class="bounds-header--airports"
          >
            Dallas (Love Field), TX to Houston (Hobby), TX
          </div>
        </div>
        <div
          class="air-upgrade-select-bounds-form--message"
        >
          Please choose from the flights below to upgrade all passengers on that flight to Wanna Get Away Plus
        </div>
        <div
          class="air-upgrade-select-bounds-form--bound-list"
        >
          <div
            class="air-upgrade-bound"
          >
            <div
              class="air-upgrade-bound--type"
            >
              DEPARTING
            </div>
            <div
              class="flight-brief-summary bgwhite bdb p5"
            >
              <div
                class="flex xlarge pdkblue bold"
              >
                <div
                  class="flex4"
                >
                  Dec 29
                </div>
                <div
                  class="flex2"
                >
                  DAL
                </div>
                <div
                  class="flex2 flight-brief-summary--airplane center"
                >
                  <i
                    class="mt3 icon icon_airplane"
                  />
                </div>
                <div
                  class="flex2"
                >
                  HOU
                </div>
              </div>
              <div
                class="flex large gray4"
              >
                <div
                  class="flex4"
                >
                  Wednesday
                </div>
                <div
                  class="flex2 flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:10
                    </span>
                    <span
                      class="time-period"
                    >
                      AM
                    </span>
                  </div>
                </div>
                <div
                  class="flex2"
                />
                <div
                  class="flight-brief-summary--summary-group"
                >
                  <div
                    class="flex2 flight-time"
                  >
                    <div
                      class="flight-time--time"
                    >
                      <span>
                        3:40
                      </span>
                      <span
                        class="time-period"
                      >
                        PM
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="air-upgrade-bound--select"
            >
              <div
                class="field"
              >
                <div
                  class="relative flex checkbox-button flex-cross-center"
                  name="mockId1"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width ml2"
                    >
                      <div
                        class="air-upgrade-bound--select-message-header"
                      >
                        Upgrade all passengers to Business Select®
                      </div>
                      <div
                        class="air-upgrade-bound--select-message-body"
                      >
                        and earn 6,937 more points
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="air-upgrade-bound"
          >
            <div
              class="air-upgrade-bound--type"
            >
              RETURNING
            </div>
            <div
              class="flight-brief-summary bgwhite bdb p5"
            >
              <div
                class="flex xlarge pdkblue bold"
              >
                <div
                  class="flex4"
                >
                  Jan 5
                </div>
                <div
                  class="flex2"
                >
                  HOU
                </div>
                <div
                  class="flex2 flight-brief-summary--airplane center"
                >
                  <i
                    class="mt3 icon icon_airplane"
                  />
                </div>
                <div
                  class="flex2"
                >
                  DAL
                </div>
              </div>
              <div
                class="flex large gray4"
              >
                <div
                  class="flex4"
                >
                  Wednesday
                </div>
                <div
                  class="flex2 flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:05
                    </span>
                    <span
                      class="time-period"
                    >
                      AM
                    </span>
                  </div>
                </div>
                <div
                  class="flex2"
                />
                <div
                  class="flight-brief-summary--summary-group"
                >
                  <div
                    class="flex2 flight-time"
                  >
                    <div
                      class="flight-time--time"
                    >
                      <span>
                        1:30
                      </span>
                      <span
                        class="time-period"
                      >
                        PM
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="air-upgrade-bound--select"
            >
              <div
                class="field"
              >
                <div
                  class="relative flex checkbox-button flex-cross-center"
                  name="mockId2"
                >
                  <div>
                    <span
                      class="checkbox-button--mark"
                    >
                      <i
                        class="absolute xlarge bgtransp icon icon_check"
                      />
                    </span>
                  </div>
                  <div>
                    <div
                      class="checkbox-button--children flex-equal-width ml2"
                    >
                      <div
                        class="air-upgrade-bound--select-message-header"
                      >
                        Upgrade all passengers to Business Select®
                      </div>
                      <div
                        class="air-upgrade-bound--select-message-body"
                      >
                        and earn 6,937 more points
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="air-upgrade-select-bounds-form--pricing-list"
        >
          <div
            class="bound-price"
          >
            <div
              class="bound-price--airport-section"
            >
              <div
                class="bound-price--airport-info"
              >
                DAL
                 - 
                HOU
              </div>
              <div
                class="bound-price--flight-number"
              >
                539/1467
              </div>
            </div>
            <div
              class="bound-price--amount-info-section"
            >
              <div
                class="bound-price--amount-section"
              >
                <div
                  class="bound-price--amount-flex-group"
                >
                  <div
                    class="bound-price--amount"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        30.11
                      </span>
                    </div>
                  </div>
                  <div
                    class="bound-price--pax-count"
                  >
                    x
                    2
                     
                    AIR_UPGRADE_MULTI_PAX_TEXT
                  </div>
                </div>
                <div
                  class="bound-price--total-amount"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      0.00
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bound-price"
          >
            <div
              class="bound-price--airport-section"
            >
              <div
                class="bound-price--airport-info"
              >
                HOU
                 - 
                DAL
              </div>
              <div
                class="bound-price--flight-number"
              >
                694/696
              </div>
            </div>
            <div
              class="bound-price--amount-info-section"
            >
              <div
                class="bound-price--amount-section"
              >
                <div
                  class="bound-price--amount-flex-group"
                >
                  <div
                    class="bound-price--amount"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        30.09
                      </span>
                    </div>
                  </div>
                  <div
                    class="bound-price--pax-count"
                  >
                    x
                    2
                     
                    AIR_UPGRADE_MULTI_PAX_TEXT
                  </div>
                </div>
                <div
                  class="bound-price--total-amount"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      0.00
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="price-summary-notice"
        >
          <span>
            Please read 
            <a
              href="https://mobile.southwest.com/fare-rules"
              target="_blank"
            >
              fare rules
            </a>
             associated with purchase.
          </span>
        </div>
        <div
          class="purchase-content--summary-footer"
        >
          <div
            class="price-total"
          >
            <div
              class="price-total--info"
            >
              <div
                class="price-line"
              >
                <span
                  class="price-line--title"
                >
                  SHARED__PRICE_LINE_TITLES__TOTAL_PASSENGER
                </span>
                <div
                  class="price-amount"
                >
                  <div
                    class="price-line--currency_total"
                  >
                    <div
                      class="currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        0.00
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="table fullwidth mt3"
              >
                <div
                  class="price-total--info-col"
                >
                  <p>
                    SHARED__PRICE_TOTAL_EXPLANATORY_NOTE__BRIEF_NOTE
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="purchase-content--summary-footer-nav"
          >
            <button
              class="button button--fluid huge button--yellow"
              type="submit"
            >
              AIR_UPGRADE_SELECT_BOUNDS_SUBMIT_TEXT
            </button>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;
